/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.common;

import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.common";
option java_outer_classname = "SdkProto";

message SdkBundleInfo {

  enum SdkType {
    EMBEDDED = 0;
  }

  SdkType sdk_type = 1;

  string sdk_binding = 2;

  string sdk_game_id = 3;

  string sdk_channel_id = 4;

  google.protobuf.Struct sdk_extra_params = 5;
}

