/*
 * Copyright (c) 2022-present Doodle. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package doodle.design.login;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "doodle/design/common/sdk.proto";
import "doodle/design/common/status.proto";

option java_multiple_files = true;
option java_package = "org.doodle.design.login";
option java_outer_classname = "LoginProto";

message AccountInfo {
  string account_id = 1;
  doodle.design.common.SdkBundleInfo sdk_bundle = 2;
  google.protobuf.Struct extra_params = 3;
}

message AccountAuthTokenInfo {
  string token = 1;
  string account_id = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message AccountAuthRequest {
  doodle.design.common.SdkBundleInfo sdk_bundle = 1;
}

message AccountAuthReply {
  oneof Result {
    doodle.design.common.Status error = 1;
    AccountAuthTokenInfo reply = 2;
  }
}

message AccountVerifyRequest {
  AccountAuthTokenInfo token = 1;
}

message AccountVerifyReply {
  oneof Result {
    doodle.design.common.Status error = 1;
    AccountInfo reply = 2;
  }
}

message RoleInfo {
  string role_id = 1;
  doodle.design.common.SdkBundleInfo sdk_bundle = 2;
  string role_name = 3;
  int32 role_level = 4;
  google.protobuf.Struct extra_params = 5;
}

message RoleInfoList {
  repeated RoleInfo role_info = 2;
}

message RolePullRequest {
  string account_id = 1;
}

message RolePullReply {
  oneof Result {
    doodle.design.common.Status error = 1;
    RoleInfoList reply = 2;
  }
}

message RoleUploadRequest {
  string account_id = 1;
  RoleInfo role_info = 2;
}

